crates/oxidoc/tests/snapshots/golden_writer__latex__common__ordered-lower-alpha.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
\begin{enumerate}
\def\labelenumi{\alph{enumi}.}
\tightlist
\item
  one
\item
  two
\end{enumerate}
