crates/oxidoc/tests/snapshots/golden_writer__latex__common__ordered-nested.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
\begin{enumerate}
\def\labelenumi{\arabic{enumi}.}
\item
  outer

  \begin{enumerate}
  \def\labelenumii{\arabic{enumii}.}
  \tightlist
  \item
    inner one
  \item
    inner two
  \end{enumerate}
\end{enumerate}
