crates/oxidoc/tests/snapshots/golden_writer__latex__common__para-wrap.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
This is a deliberately long paragraph with enough words that the writer
must wrap it across the fill column boundary at least once or twice.
