crates/oxidoc/tests/snapshots/golden_writer__latex__common__quoted-smart.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
She said ``hello'' and `hi'.
