crates/oxidoc/tests/snapshots/golden_writer__latex__common__smart-ellipsis-dashes.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
wait\ldots{} an en--dash and an em---dash
