crates/oxidoc/tests/snapshots/golden_writer__latex__common__span-semantic.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
\protect\phantomsection\label{theid}{x} {term}
