crates/oxidoc/tests/snapshots/golden_writer__latex__common__span.snap
---
source: crates/oxidoc/tests/golden_writer.rs
expression: output
---
a \protect\phantomsection\label{s}{styled} word
